--- a/dreampulse.css
+++ b/dreampulse.css
@@ -7,14 +7,12 @@
 html {
     scroll-behavior: smooth;
 }
-
 .parent {
     background: no-repeat url("https://templatemo.com/templates/templatemo_536_dream_pulse/img/dream-pulse-header.jpg");
     display: flex;
     width: 100%;
     height: 100%;
 }
-
 .child1 {
     background-color: rgba(0, 0, 0, 0.5);
     color: rgb(255, 255, 255);
@@ -43,7 +41,7 @@ html {
 
 .childlinks li {
     list-style: square;
-    font-size: larger;
+    font-size:1.3rem;
 }
 
 .childlinks {
@@ -57,6 +55,13 @@ html {
 .childlinks li:hover {
     animation: blink 1s infinite;
 }
+
+.inputcheckbox{
+    display: none;
+  }
+  .ham-icon{
+     display: none;
+  }
 
 @keyframes blink {
     0% {
@@ -80,7 +85,12 @@ html {
 .footer a:hover {
     color: orange;
 }
-
+.visible{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content:center;
+}
 .iconscenter {
     display: flex;
 }
@@ -299,25 +309,61 @@ i {
     .child1 {
         position: relative;
         width: 100%;
-        height: auto;
+        height:auto;
         text-align: center;
         padding: 20px;
     }
-
     .child2 {
         margin-left: 0;
         width: 100%;
     }
+    .visible{
+        position: absolute;
+        display: none; 
+        flex-direction: column;
+        align-items: center;
+        gap:5px;
+        top:220px;
+        left:0px;
+        width: 100%;
+        height:130%;
+        line-height: 2rem;
+        font-size: smaller;
+        background-color:rgba(0,0,0,0.5);
+    }
+    footer{
+        line-height: 0%;
+    }
+     .ham-icon{
+        display:block;
+        position:absolute;
+        margin-left: 70%;
+        top:17%;
+    }
+    .ham-icon:hover{
+        cursor: pointer;
+    }
+    .inputcheckbox:checked ~.visible{
+        display:flex;
+        flex-direction: column;
+    } 
+    
     .iconscenter i{
         border-radius:50%;
+
     }
 
     .introduction {
-        margin: 5%;
+        margin-top:100%;
         height: 90%;
-        width: 90%;
-        display: flex;
+        width: 100%;
         flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        margin-left:auto;
+        margin-bottom:30%;
+        font-size: small;
+        line-height:0.5rem;
     }
 
     .introduction>h2 {
