--- a/dreampulse.css
+++ b/dreampulse.css
@@ -12,6 +12,7 @@ html {
     display: flex;
     width: 100%;
     height: 100%;
+    
 }
 .child1 {
     background-color: rgba(0, 0, 0, 0.5);
@@ -107,8 +108,9 @@ html {
     border-radius: 10px;
 }
 
-.iconscenter>i:hover {
+.iconscenter>a i:hover{
     background-color: skyblue;
+    transform:scale(1.2);
 }
 
 .child2 {
@@ -187,6 +189,7 @@ i {
     border: 6px double gray;
     padding: 5%;
     margin: 5%;
+    border-radius: 10px;
 }
 
 .ourwork img {
@@ -248,6 +251,7 @@ i {
     width: 200px;
     padding: 15px;
     border: 1px solid gray;
+    border-radius: 10px;
 }
 
 .talktous {
@@ -302,10 +306,11 @@ i {
 
 @media (max-width:558px) {
     .parent {
+        background-image: url("https://templatemo.com/templates/templatemo_536_dream_pulse/img/dream-pulse-header.jpg");
         flex-direction: column;
         background-size: auto;
     }
-
+    
     .child1 {
         position: relative;
         width: 100%;
@@ -348,11 +353,15 @@ i {
         flex-direction: column;
     } 
     
-    .iconscenter i{
+    .iconscenter>a i{
         border-radius:50%;
 
     }
-
+    .iconscenter>a i:hover{
+        cursor: pointer;
+        background-color: skyblue;
+        transform: scale(1.2);
+    }
     .introduction {
         margin-top:100%;
         height: 90%;
@@ -404,7 +413,9 @@ i {
     .companyprofileright {
         width: 90%;
     }
-
+    .carousel-item figcaption h2 span{
+        font-size:0.2rem; 
+    }
     .ourclients img {
         width: 90%;
     }
@@ -443,7 +454,7 @@ i {
         margin-left: 0;
         width: 100%;
     }
-    .iconscenter i{
+    .iconscenter>a i{
         border-radius:50%;
     }
     .introduction {
@@ -598,6 +609,11 @@ i {
 }
 
 @media (min-width:991px) and (max-width:1900px) {
+    .parent {
+        background-image:("https://templatemo.com/templates/templatemo_536_dream_pulse/img/dream-pulse-header.jpg");
+        background-size: 100% auto;
+        background-repeat: no-repeat;
+    }
     .divide {
         flex-direction: column;
         justify-content: center;
@@ -612,5 +628,12 @@ i {
 
     .companyprofileright {
         width: 90%;
+    }
+}
+@media (min-width:1901px) and (max-width:3000px){
+    .parent {
+        background-image:("https://templatemo.com/templates/templatemo_536_dream_pulse/img/dream-pulse-header.jpg");
+        background-size: 100% auto;
+        background-repeat: no-repeat;
     }
 }
