--- a/dreampulse.css
+++ b/dreampulse.css
@@ -256,7 +256,12 @@ i {
     border: 1px solid gray;
     border-radius: 10px;
 }
-
+.imagesall>img:hover{
+    transform: scale(0.8);
+}
+.imagesall>img:active{
+    background-color:rgba(0,0,0,0.5);
+}
 .talktous {
     display: flex;
     width: 100%;
